tcosconfig (0.3~rc4) unstable; urgency=low

  * Add TCOS_XORG_VIDEO_DRIVER and TCOS_XORG_VIDEO_RES to Xorg expander
  * Add some default settings in shared.py
  * Update translations
  * Revert changes in cancel and don't do nothing in finish button
  * Fail if no running as root
  * Update translations

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Fri, 18 Apr 2008 15:59:50 +0200

tcosconfig (0.3~rc3) unstable; urgency=low

  * ConfigReader.py TcosGui.py:
    - Remove from changeddata TCOS_NETBOOT_MENUS if no changed
  * Write TCOS_BASED_TEMPLATE in tcosconfig.conf

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Tue, 15 Apr 2008 13:23:21 +0200

tcosconfig (0.3~rc2) unstable; urgency=low

  * New release uploaded to experimental

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Tue, 15 Apr 2008 11:15:56 +0200

tcosconfig (0.3~rc1) unstable; urgency=low

  * NOT RELEASE
  * New design, more small
  * Add template (tcos.conf) system
  * Rewrite ConfigReader.py using a dictionary for data
  * Save data in /etc/tcos/template (don't edit tcos.conf)
  * Fix GUI freeze when exec gentcos
  * ConfigReader.py
    - Add old config before new in tcosconfig.conf save
  * ConfigReader.py:
    - Add setup_chroot function to copy config files from / to chroot
  * shared.py TcosGui.py tcosconig.glade
    - Add new GUI configurations (TCOS_BOOT_MENU, auth expander, etc...)
  * Add more expanders (kernel, thinclients, other)
  * Update translations
  * ConfigReader.py:
    - Fix tcosconfig.conf BASED_TEMPLATE
  * TcosGui.py shared.py:
    - Add linked_widgets (enable/disable others by widget value)
  * TcosChrootBuilder.py
    - Update Debian unstable and Ubuntu hardy kernels
  * Add icon to window
  * Update translations

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Mon, 14 Apr 2008 15:28:33 +0200

tcosconfig (0.2.12) unstable; urgency=low

  * tcosconfig.glade
    - Change TCOS_WEP to TCOS_WIRELESS_KEY for WEP/WPA 
